# math

./: CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  init.sh  install_deps.sh  tanhgrad算子设计方案11.8版.docx  test.md  version.info
.github/workflows/: osv-scanner.yml
cmake/: func.cmake  ut.cmake
cmake/modules/: Findtilingapi.cmake
conversion/circular_pad/op_host/: circular_pad_tiling.h
conversion/fill_diagonal_v2/: README.md
conversion/pad_v3_grad_replicate/: README.md
conversion/pad_v3_grad_replication/: README.md
conversion/pad_v4_grad/: README.md
conversion/transpose_v2/: README.md
docs/: README.md  op_api_list.md
docs/context/: aicore_develop_guide.md  dir_structure.md  quick_op_invocation.md
docs/debug/: op_debug_prof.md
docs/develop/: aicore_develop_guide.md  aicore_develop_guide_new.md  aicpu_develop_guide.md  op_migration_guide.md  quick_op_develop.md
docs/invocation/: commercial_release.md  op_invocation.md  quick_op_invocation.md  quick_op_invocation_harmony.md
examples/fast_kernel_launch_example/: CMakeLists.txt  README.md
experimental/npu_ops_math_ext/: CMakeLists.txt  README.md
math/add_lora/: README.md
math/cosh/: README.md
math/cosh/tests/ut/op_kernel/: CMakeLists.txt  run.sh  test_cosh.cpp
math/floor_div/: CMakeCache.txt
math/rfft1_d/: README.md
math/right_shift/: README.md
math/stft/: README.md
math/tanh_grad/: README.md
scripts/: parse_changed_files.py  parse_changed_ops.py
scripts/mindstudio/: README.md  assistant.py  build_standalone.py  opgen_standalone.py
scripts/package/: package.py
(+614 files in other folders)
